Fix JNA issue #6- JNA should load a library only once
git-svn-id: https://svn.java.net/svn/jna~svn/branches/wmeissner-jnalib@20 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/build.xml
+++ b/build.xml
@@ -164,6 +164,7 @@
       <class name="com.sun.jna.Memory"/>
       <class name="com.sun.jna.Library$Handler"/>
       <class name="com.sun.jna.Native"/>
+      <class name="com.sun.jna.NativeLibrary"/>
     </javah>
   </target>
 
