--- a/build.xml
+++ b/build.xml
@@ -165,6 +165,7 @@
       <class name="com.sun.jna.Library$Handler"/>
       <class name="com.sun.jna.Native"/>
       <class name="com.sun.jna.NativeLibrary"/>
+      <class name="com.sun.jna.CallbackReference"/>
     </javah>
   </target>
 
