--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
   <property name="copyright"
             value="Copyright &amp;copy; 2007 ${company.full}. All Rights Reserved."/>
 
-  <property name="version" value="2.3.1"/>
+  <property name="version" value="3.0.0-experimental"/>
   <property name="jdk" value="1.4"/>
 
   <!-- Miscellaneous -->
