Implement some fixes for Solaris/sparc compilation from jjohnson@keck.hawaii.edu
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@102 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/native/Makefile
+++ b/native/Makefile
@@ -14,7 +14,7 @@
 #   to target i386 on OSX/PPC, do 
 #     make ARCH=i386
 OS=$(shell uname | sed -e 's/CYGWIN.*/win32/g' \
-                        -e 's/SunOS.*/sparc/g' \
+                        -e 's/SunOS.*/solaris/g' \
                         -e 's/Darwin.*/darwin/g' \
                         -e 's/Linux.*/linux/g')
 
@@ -104,7 +104,7 @@ LIBS=
 endif
 
 # FIXME untested
-ifeq ($(OS),sparc)
+ifeq ($(OS),solaris)
 ARCH=sparc
 # Avoid 1.5/1.6 bug linking directly to -ljawt
 CDEFINES+=-DNEED_JAWT_HACK -fPIC
