Solaris doesn't support the -Wl,-soname param to gcc/ld
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@104 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/native/Makefile
+++ b/native/Makefile
@@ -108,7 +108,7 @@ ifeq ($(OS),solaris)
 ARCH=sparc
 # Avoid 1.5/1.6 bug linking directly to -ljawt
 CDEFINES+=-DNEED_JAWT_HACK -fPIC
-LDFLAGS=-o $@ -G -Wl,-soname,$@ 
+LDFLAGS=-o $@ -G
 LIBS=
 endif
 
