Fixup build for non-solaris
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@189 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/build.xml
+++ b/build.xml
@@ -190,7 +190,7 @@
     <condition property="make.exe" value="/usr/sfw/bin/gmake" else="make">
       <os name="SunOS"/>
     </condition>
-    <condition property="make.PATH" value="PATH=/usr/sfw/bin:/usr/bin:/usr/ccs/bin">
+    <condition property="make.PATH" value="PATH=/usr/sfw/bin:/usr/bin:/usr/ccs/bin" else="IGNORE=">
       <os name="SunOS"/>
     </condition>
     <exec executable="${make.exe}" dir="${native}" failonerror="true">
