Fixes & hacks for Solaris/sparcv9 (64bit) support
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@191 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/build.xml
+++ b/build.xml
@@ -193,6 +193,10 @@
     <condition property="make.PATH" value="PATH=/usr/sfw/bin:/usr/bin:/usr/ccs/bin" else="IGNORE=">
       <os name="SunOS"/>
     </condition>
+    <condition property="make.ARCH" value="ARCH=${os.arch}" else="IGNORE=">
+      <os name="SunOS"/>
+    </condition>
+    <echo message="make.ARCH=${make.ARCH}"/>
     <exec executable="${make.exe}" dir="${native}" failonerror="true">
       <arg value="JAVA_HOME=${jdk.home}"/>
       <arg value="JAVAH=${build.native}"/>
