Builds for sunos-sparc and sunos-sparcv9
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@201 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/build.xml
+++ b/build.xml
@@ -352,6 +352,12 @@
       <zipfileset src="${dist}/sunos-x86.jar" 
                   includes="*jnidispatch*"
                   prefix="com/sun/jna/sunos-x86"/>
+      <zipfileset src="${dist}/sunos-sparc.jar" 
+                  includes="*jnidispatch*"
+                  prefix="com/sun/jna/sunos-sparc"/>        
+      <zipfileset src="${dist}/sunos-sparcv9.jar" 
+                  includes="*jnidispatch*"
+                  prefix="com/sun/jna/sunos-sparcv9"/>
     </jar>
     <copy todir="${dist}">
       <fileset dir="${build}">
