Fixes for compilation on SuSe 9.3/amd64
Set CC=gcc for win32, since it probably won't compile with anything else these days.


git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@205 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/native/Makefile
+++ b/native/Makefile
@@ -60,7 +60,7 @@ STRIP=strip -x
 # end defaults
 
 ifeq ($(OS),win32)
-CC=cl
+CC=gcc
 ARCH=i386
 
 ifeq ($(CC),cl)
@@ -175,7 +175,7 @@ $(TESTLIB): $(BUILD)/testlib.o $(SPECS)
 
 $(FFI_OBJS):		
 	@mkdir -p $(BUILD)/libffi
-	if [ ! -f $(BUILD)/libffi/Makefile ]; then \
+	@if [ ! -f $(BUILD)/libffi/Makefile ]; then \
 	    echo "Configuring libffi"; \
 	    cd $(BUILD)/libffi && \
 		CC="$(CC)" $(SRCDIR)/libffi/configure --disable-static --with-pic=yes > /dev/null; \
