Switch to Java 1.5
git-svn-id: https://svn.java.net/svn/jna~svn/branches/jnalib-v3@214 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
 application.args=
+application.homepage=http://jna.dev.java.net
+application.title=JNA Library
+application.vendor=JNA Project
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -16,7 +19,9 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/jna.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+excludes=
 file.reference.jnalib-src=src
+includes=**
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
@@ -39,6 +44,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/Users/wayne/src/jnalib-v3/dist/
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
