enable crash protection on win64 reorg tests based on required underlying native features
git-svn-id: https://svn.java.net/svn/jna~svn/branches/win64@658 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/jnalib/native/Makefile
+++ b/jnalib/native/Makefile
@@ -89,9 +89,8 @@ CC += -mno-cygwin
 LD += -mno-cygwin -Wl,--add-stdcall-alias
 WINDRES=windres
 EXTRAOBJS=$(RSRC)
-ifneq ($(ARCH),amd64)
 CDEFINES=-DHAVE_PROTECTION
-else
+ifeq ($(ARCH),amd64)
 # MINGW64
 # native 64:
 # include paths are cygwin, compiler not cygwin, uses symlinks
